# snippets

./: README.md
ansible/inline-templates-as-values/: playbook.yml
dotnet-getting-started/: Program.cs  dotnet-getting-started.csproj
gcp/: Pipfile  ansible.cfg  build.yml
gcp/inventories/: inventory.ini
gcp/inventories/group_vars/: gcp_vms.yml
go-full-working-api/: .gitignore  Dockerfile  README.md  docker-compose.yml  go.mod  go.sum  main.go
go-full-working-api/app/: handlers.go  handlers_e2e_test.go  routes.go
go-getting-started/: composite-literal-anti-pattern.go  enum-test.go  error-handling.go  go.mod  hello  main.go  program-lifecycle.go  webcrawler-tour-of.go
go-getting-started/enumDef/: enumDef.go
go-test-module/: go.mod  module.go  module_test.go
go-web/: gin.go  go.mod  go.sum  main.go  metrics-web-server.go  openmetrics-web-server.go  vanilla-web-server.go
k6/: script.js  script_error.js
netlify/: .gitignore  index.html  package-lock.json  package.json
openshift/ansible-created-projects/: Pipfile  manager-rolebinding.yaml  playbook.yml  service.yml
openshift/new-platform/: Dockerfile  Makefile  tests.py
openshift/static-app/: index.html
pwa-app/: app.html
python-fastapi/: .gitignore  do  main.py  pyproject.toml
python-pytest/: main.py  pyproject.toml  test_main.py
python-sqlalchemy/: main.py  pyproject.toml
react/: package-lock.json
react/src/: App.css  App.js  ColorText.js
terraform/: .gitignore  configure.yml  hosts  main.tf  terraform.tfvars
terraform/static_ips/: main.tf  terraform.tfvars
(+16 files in other folders)
