[tool.poetry]
name = "python-pytest"
version = "0.1.0"
description = ""
authors = ["Daniel Lima <daniellima.pessoal@gmail.com>"]
readme = "README.md"
packages = [{include = "python_pytest"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
